# godot-bevy-quinn

./: README.md  bevy_app_singleton.tscn  icon.svg.import  player.tscn  player_node.tscn  project.godot  rust.gdextension  rust.gdextension.uid  test.tscn
map/spritesheets/: tilemap_packed.png.import
player/sprite_sheets/: Sword_Death_with_shadow.png.import  Sword_Hurt_with_shadow.png.import  Sword_Idle_with_shadow.png.import  Sword_Run_Attack_with_shadow.png.import  Sword_Run_with_shadow.png.import  Sword_Walk_Attack_with_shadow.png.import  Sword_Walk_with_shadow.png.import  Sword_attack_with_shadow.png.import  Unarmed_Death_with_shadow.png.import  Unarmed_Hurt_with_shadow.png.import  Unarmed_Idle_with_shadow.png.import  Unarmed_Run_with_shadow.png.import  Unarmed_Walk_with_shadow.png.import
rust/: Cargo.toml
rust/src/: chat.rs  lib.rs  player.rs  protocol.rs  server.rs  ui.rs
